--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,7 @@
     "demo": {
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:application",
+          "builder": "@angular-devkit/build-angular:browser",
           "configurations": {
             "development": {
               "extractLicenses": false,
@@ -25,8 +25,8 @@
           "options": {
             "assets": [],
             "index": "src/index.html",
-            "browser": "src/main.ts",
-            "outputPath": "dist/demo",
+            "main": "src/main.ts",
+            "outputPath": "docs",
             "scripts": [],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
@@ -46,6 +46,9 @@
             }
           },
           "defaultConfiguration": "development"
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       },
       "prefix": "app",
@@ -55,5 +58,8 @@
       "sourceRoot": "src"
     }
   },
-  "version": 1
+  "version": 1,
+  "cli": {
+    "analytics": false
+  }
 }
